--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   }
   
   .logo-container img {
-    height: 60px; /* Adjust the height as needed */
+    height: 60px; 
   }
   
   .nav-links {
