--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
 body {
     padding: 0;
     margin: 0;
-    background:#624f74;
+    background: rgb(58, 56, 56);
    
   }
   /* style nav bar */
   .navbar {
-    background-color:  #8f9f91;
+    background-color: dark rgb(1, 34, 34);
     padding: 10px 0;
     display: flex;
     justify-content: flex-end; /* Align items to the right */
